@@ -1,5 +1,8 @@
 2006-04-14 Sandro Santilli <strk@refractions.net>
 
+	* source/headers/geos/geom/BinaryOp.h: new template
+	function implementing various heuristics aimed at
+	making binary geometry ops work around robustness issues.
 	* source/headers/geos/operation/overlay/OverlayOp.h:
 	added overlayOp() adapter to generalize use of
 	OverlayOp::overlayOp()
